--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </ul>
       </nav>
     </header>
-    <div class="hero"></div>
+    <section class="hero"></section>
     <main class="content">
-      <div class="search-engine-optimization">
+      <section class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
@@ -40,8 +40,8 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
+      </section>
+      <section
         id="online-reputation-management"
         class="online-reputation-management"
       >
@@ -58,8 +58,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      </section>
+      <section id="social-media-marketing" class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -72,10 +72,10 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
+      </section>
     </main>
-    <div class="benefits">
-      <div class="benefit-lead">
+    <section class="benefits">
+      <aside class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
@@ -85,8 +85,8 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+      </aside>
+      <aside class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img
           src="./assets/images/brand-awareness.png"
@@ -96,8 +96,8 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+      </aside>
+      <aside class="benefit-cost">
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
@@ -107,8 +107,8 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
-    </div>
+      </aside>
+    </section>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
