finished changing HTML elements to semantic

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <ul>
           <li>
             <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+              >Online Reputation Management</a>
           </li>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
